--- a/CursoPracticoDeJavaScript/index.html
+++ b/CursoPracticoDeJavaScript/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fundamentos de JS</title>
+    <title>JS Práctico</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,6 +22,13 @@
         <a href="">æ☻ƒ</a>
       </p>
     </header>
+    <section class="section--link-page">
+      <ul>
+        <li>
+          <a href="./html/figuras.html">Figuras</a>
+        </li>
+      </ul>
+    </section>
     <script src="js/prueba.js" type="module"></script>
   </body>
 </html>
