--- a/CursoPracticoDeJavaScript/index.html
+++ b/CursoPracticoDeJavaScript/index.html
@@ -25,10 +25,17 @@
     <section class="section--link-page">
       <ul>
         <li>
-          <a href="./html/figuras.html">Figuras</a>
+          <a href="./Figuras/html/figuras.html">Figuras</a>
+        </li>
+        <li>
+          <a href="./Porcentaje_Y_Descuentos/html/descuentos.html"
+            >Descuentos</a
+          >
+        </li>
+        <li>
+          <a href="./PromedioModaMediana/html/promedio.html">Promedios</a>
         </li>
       </ul>
     </section>
-    <script src="js/prueba.js" type="module"></script>
   </body>
 </html>
