--- a/CursoPracticoDeJavaScript/index.html
+++ b/CursoPracticoDeJavaScript/index.html
@@ -35,6 +35,9 @@
         <li>
           <a href="./PromedioModaMediana/html/promedio.html">Promedios</a>
         </li>
+        <li>
+          <a href="./analisisSalarial/html/index.html">Análisis Salarial</a>
+        </li>
       </ul>
     </section>
   </body>
